[package]
name = "gigapan"
version = "0.1.0"
edition = "2021"
description = "fork of wirelyre's PC-finder to offer tools for PC-research"

[dependencies]
hashbrown = "0.14.0"
fumen = "0.1.2"
indicatif = "0.17.7"

nohash = "0.2.0"
rayon = "1.5.3"

srs-4l = { path = "../srs-4l" }
compute = { path = "../compute" }
legal-boards = { path = "../legal-boards" }
clap = { version = "4.4.6", features = ["derive"]}